# sourmash_plugin_containment_search

./: Makefile  README.md  pyproject.toml
src/: sourmash_plugin_containment_search.py  sourmash_plugin_xyz.py
tests/: test_sourmash_plugin.py
